# linkedin-cv-generator

./: .gitignore  CLAUDE.md  CV_OPTIMIZATION_RULES.md  WBS.md  pyproject.toml
cv_generator/: linkedin_oauth.py  linkedin_parser.py  main.py  pdf_parser.py  template_engine.py  web_generate.py
data/: cv_en_debug.tex
docs/: index.html
portfolio/: package-lock.json  package.json
portfolio/src/app/: layout.tsx  page.tsx
portfolio/src/app/api/chat/: route.ts
portfolio/src/app/api/download/: route.ts
portfolio/src/app/api/generate-cv/: route.ts
portfolio/src/app/api/parse/: route.ts
portfolio/src/components/: ChatWidget.tsx
portfolio/src/data/: profile.json
portfolio/src/lib/: gemini-client.ts  parallel-analyzer.ts  section-checker.ts  sections.config.json
templates/: cv.tex  cv_en.tex  cv_tr.tex  cv_tr_ai.tex  cv_tr_sap.tex  cv_tr_sap_backup.tex  on_yazi_ai.tex  on_yazi_sap.tex
tests/: test_pdf_parser.py  test_pipeline.py  test_template.py
